<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:id="@+id/main" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Меню"
        app:titleTextColor="@color/white"
        android:layout_marginBottom="120sp"/>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="70sp"
        android:text="@string/btn_1"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="70sp"
        android:text="@string/btn_2"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100sp"
        android:text="@string/btn_3"
        android:textSize="36sp"
        android:textStyle="bold" />

</LinearLayout>